@@ -1,3 +1,8 @@
+2012-03-10  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/52469
+	* gfortran.dg/proc_ptr_34.f90: New.
+
 2012-03-06  Tobias Burnus  <burnus@net-b.de>
 
 	Backport from mainline
